--- a/index.html
+++ b/index.html
@@ -7,19 +7,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Bem-vindo ao MiniApp Pokémon</h1>
-  <button id="btn-action">Clique aqui</button>
-
-  <!-- Adicionando o Telegram Login Widget -->
-  <script async src="https://telegram.org/js/telegram-widget.js?4"
-    data-telegram-login="PckMst_bot" 
-    data-size="large" 
-    data-radius="10"
-    data-auth-url="https://05ff-205-164-169-60.ngrok-free.app/auth" 
-    data-request-access="write"></script>
+  <div class="container">
+    <h1>Bem-vindo ao MiniApp Pokémon</h1>
+    <p>Clique no botão abaixo para começar:</p>
+    <button id="btn-action">Clique aqui</button>
+  </div>
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
-
