--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Bem-vindo ao MiniApp Pokémon</h1>
     <p>Clique no botão abaixo para começar:</p>
     <button id="btn-action">Clique aqui</button>
+    <p id="feedback" style="margin-top: 20px; color: green; display: none;">Botão clicado!</p>
   </div>
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
